修改字号与字体

--- a/head.tex
+++ b/head.tex
@@ -1,7 +1,7 @@
 % 作者：Yuchen Deng〔Zz〕 QQ群：19346666、111601117
 % 欢迎加群共同维护与交流
 
-\documentclass[a4paper,fontset=fandol,zihao=-4,linespread=1.2]{ctexbook}
+\documentclass[a4paper,fontset=noto,zihao=-4,linespread=1.2]{ctexbook}
 
 % \setCJKmainfont{FandolFang-Regular.otf} %中文字体
 \setmainfont[Mapping=tex-text]{PT Mono} %英文字体
