添加超级键介绍

--- a/ch01.tex
+++ b/ch01.tex
@@ -10,7 +10,26 @@
 
 \setcounter{chapter}{0}
 
-\chapter{终端基础命令}
+\chapter{必须知道的知识}
+
+
+\section{认识超级键}
+
+\par 超级键（Super 键）也叫 Windows 键、徽标键或系统键，在现代的操作系统中通常用来呼叫出功能表或菜单。不同的桌面，该键或者与该键组合的快捷键功能略有不同，很多系统单独按下超级键时，会显示启动器（菜单），或者通过系统设置来让超级键显示启动器。启动器展示所有应用的入口，它的体验好坏、效率高低，自然非常重要。
+
+\begin{figure} [htbp]
+	\centering
+	\includegraphics [scale=0.6] {images/ch01/2021-10-28_15-33-03.png}
+	\caption{Super 键}
+\end{figure}
+
+\par 以下组合键建议你挨个尝试并熟练运用：
+\begin{lstlisting}
+    Super+S 切换工作区（多任务视图）
+    Super+A 显示全部窗口
+    Super+E 启动文件管理器
+    Super+L 锁屏
+\end{lstlisting}
 
 
 \section{什么是终端}
