更换英文字体

--- a/head.tex
+++ b/head.tex
@@ -4,7 +4,7 @@
 \documentclass[a4paper,fontset=fandol,zihao=-4,linespread=1.2]{ctexbook}
 
 % \setCJKmainfont{FandolFang-Regular.otf} %中文字体
-\setmainfont[Mapping=tex-text]{PT Mono} %英文字体
+\setmainfont[Mapping=tex-text]{Source Code Pro} %英文字体
 \ctexset{
   chapter/format = \Large\bfseries\centering,
   section/format = \large\bfseries,
