减少不必要的警告

--- a/linux-notes.tex
+++ b/linux-notes.tex
@@ -49,17 +49,17 @@ $\sim$ %∼
 % 图片使用示例1：绽放图片宽度至文字宽度的96%
 \begin{figure} [htbp]
 	\centering
-	\includegraphics [width=0.96\textwidth]{images/ch03/2021-10-28_09-55-54.png}
+	\includegraphics [width=0.96\textwidth]{images/sample-1.png}
 	\caption{查看桌面启动时间}
-	\label{fig:2021-10-28_09-55-54}
+	\label{fig:sample-1}
 \end{figure}
 
 % 图片使用示例2：绽放图片至自身宽度的90%
 \begin{figure} [htbp]
 	\centering
-	\includegraphics [scale=0.9]{images/ch03/2021-10-28 09-55-54.png}
+	\includegraphics [scale=0.9]{images/sample-2.png}
 	\caption{查看桌面启动时间}
-	\label{fig:2021-10-28_09-55-54}
+	\label{fig:sample-2}
 \end{figure}
 
 % 引用图片
