修改英文字体

--- a/ch01.tex
+++ b/ch01.tex
@@ -56,7 +56,7 @@
 	\label{fig:2021-10-28_22-31-38}
 \end{figure}
 
-\par 在终端里，主目录可以用符号“~”代替，现在请打开终端，运行下面的命令，看看输出并且与图片\ref{fig:2021-10-28_22-31-38}进行对比。
+\par 在终端里，主目录可以用符号“$\sim$”代替，现在请打开终端，运行下面的命令，看看输出并且与图片\ref{fig:2021-10-28_22-31-38}进行对比。
 \begin{lstlisting}
     $ ls ~
     $ echo ~
