完善路径结构

--- a/ch01.tex
+++ b/ch01.tex
@@ -108,8 +108,11 @@ alias l='ls -CF'
 	\label{fig:2021-10-31_16-05-54}
 \end{figure}
 
-\par 我的用户名是loaden,所以我的主目录路径就是/home/loaden。依次类推，我妻子的主目录路径是/home/mengzhu，我儿子的主目录路径是/home/okayen。这条命令通过参数筛选了我想要的结果，请尝试不带参数直接执行“tree /”，可以加深理解。
-\par 注意：/home本身不是主目录，而是所有用户主目录的挂载点，它通常对应一个单独的分区。事实上Linux系统根目录下的各个子目录可以分布在不同的硬盘分区以及不同的硬盘设备上，这是Windows系统无法实现的。
+\par 我的用户名是loaden，严格的说，我的主目录只是loaden，它被建立在home目录下，对应的路径就是/home/loaden。依次类推，我妻子的主目录路径是/home/mengzhu，我儿子的主目录路径是/home/okayen。这条命令通过参数筛选了我想要的结果，请尝试不带参数直接执行“tree /”，可以加深理解。
+\par 注意：/home不是家目录，而是所有用户主目录（家目录）的挂载点、父目录所在路径，它通常对应一个单独的分区。事实上Linux系统根目录下的各个子目录可以分布在不同的硬盘分区以及不同的硬盘设备上。
+
+
+\section{为什么tree命令不存在}
 
 
 \ifx\all\undefined
